[gd_scene load_steps=8 format=3 uid="uid://c5naht0xe6c2b"]

[ext_resource type="Script" uid="uid://cmiecqtx5038n" path="res://scripts/menu.gd" id="1_07q5t"]
[ext_resource type="Theme" uid="uid://csq1nd60hipkc" path="res://resources/main_theme.tres" id="1_fh16r"]
[ext_resource type="PackedScene" uid="uid://r73rjmssld0t" path="res://scenes/ui/option_slider.tscn" id="3_r11a1"]
[ext_resource type="Script" uid="uid://bfutldda7uu6g" path="res://scripts/ui/keymap_manager.gd" id="5_3yoxx"]
[ext_resource type="PackedScene" uid="uid://tui82ymjxp61" path="res://scenes/ui/option_keymap.tscn" id="5_rrgn5"]

[sub_resource type="InputEventKey" id="InputEventKey_r11a1"]
device = -1
ctrl_pressed = true
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_rrgn5"]
events = [SubResource("InputEventKey_r11a1")]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -273.0
offset_right = 273.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_fh16r")
script = ExtResource("1_07q5t")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tab_focus_mode = 0

[node name="Audio" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2

[node name="MasterVolume" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("3_r11a1")]
layout_mode = 2
option_name = &"master_volume"
option_label = "Master Volume"

[node name="MusicVolume" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("3_r11a1")]
layout_mode = 2
option_name = &"music_volume"
option_label = "Music Volume"

[node name="EffectsVolume" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("3_r11a1")]
layout_mode = 2
option_name = &"effects_volume"
option_label = "Effects Volume"

[node name="UIVolume" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer" instance=ExtResource("3_r11a1")]
layout_mode = 2
option_name = &"ui_volume"
option_label = "UI Volume"

[node name="Controls" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controls"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("5_3yoxx")
option_keymap_scene = ExtResource("5_rrgn5")

[node name="Gameplay" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Apply" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
shortcut = SubResource("Shortcut_rrgn5")
shortcut_feedback = false
text = "Apply"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
