[gd_scene load_steps=4 format=3 uid="uid://dw01jx0pxjbn4"]

[ext_resource type="Script" uid="uid://cmiecqtx5038n" path="res://scripts/menu.gd" id="1_0o444"]
[ext_resource type="Theme" uid="uid://csq1nd60hipkc" path="res://resources/main_theme.tres" id="1_ajcle"]
[ext_resource type="AudioStream" uid="uid://ep88mqdoncv7" path="res://audio/music/Menu-Theme.ogg" id="3_15pwj"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ajcle")
script = ExtResource("1_0o444")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Back" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Continue"

[node name="RestartLevel" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart Level"

[node name="Save" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Save Game"

[node name="Load" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load Game"

[node name="MainMenu" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Main Menu"

[node name="Options" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Options"

[node name="Quit" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_15pwj")
autoplay = true
bus = &"Music"
parameters/looping = false

[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HBoxContainer/RestartLevel" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="HBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_quit_pressed"]
